language-server/src/tests/snapshots/gleam_language_server__tests__action__add_type_annotations_public_alias_to_internal_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport package\n\npub fn main() {\n  package.make_wibble()\n}\n"
---
----- BEFORE ACTION

import package

pub fn main() {
       ↑       
  package.make_wibble()
}


----- AFTER ACTION

import package

pub fn main() -> package.Wibble {
  package.make_wibble()
}
