language-server/src/tests/snapshots/gleam_language_server__tests__action__add_type_annotations_public_alias_to_internal_type_aliased_module.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport package as pkg\n\npub fn main() {\n  pkg.make_wibble()\n}\n"
---
----- BEFORE ACTION

import package as pkg

pub fn main() {
       ↑       
  pkg.make_wibble()
}


----- AFTER ACTION

import package as pkg

pub fn main() -> pkg.Wibble {
  pkg.make_wibble()
}
