language-server/src/tests/snapshots/gleam_language_server__tests__action__add_type_annotations_uses_internal_name_for_same_package.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport thepackage/internal\n\npub fn main() {\n  internal.Constructor\n}\n"
---
----- BEFORE ACTION

import thepackage/internal

pub fn main() {
       ↑       
  internal.Constructor
}


----- AFTER ACTION

import thepackage/internal

pub fn main() -> internal.Internal {
  internal.Constructor
}
