language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_contextual_types.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type IntAlias = Int\n\npub fn main() {\n  let value = 20\n}\n"
---
----- BEFORE ACTION

pub type IntAlias = Int

pub fn main() {
  let value = 20
  ▔▔▔▔↑         
}


----- AFTER ACTION

pub type IntAlias = Int

pub fn main() {
  let value: IntAlias = 20
}
