language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_contextual_types2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Result\n\npub fn main() {\n  let value = Ok(12)\n}\n"
---
----- BEFORE ACTION

pub type Result

pub fn main() {
  let value = Ok(12)
  ▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION

pub type Result

pub fn main() {
  let value: gleam.Result(Int, a) = Ok(12)
}
