language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_contextual_types3.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main() {\n  let value = wibble.Wibble\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main() {
  let value = wibble.Wibble
  ▔▔▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION

import wibble

pub fn main() {
  let value: wibble.Wibble = wibble.Wibble
}
