language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_contextual_types4.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble as wobble\n\npub fn main() {\n  let value = wobble.Wibble\n}\n"
---
----- BEFORE ACTION

import wibble as wobble

pub fn main() {
  let value = wobble.Wibble
  ▔▔▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION

import wibble as wobble

pub fn main() {
  let value: wobble.Wibble = wobble.Wibble
}
