language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_contextual_types5.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble.{type Wibble as Wobble}\n\npub fn main() {\n  let value = wibble.Wibble\n}\n"
---
----- BEFORE ACTION

import wibble.{type Wibble as Wobble}

pub fn main() {
  let value = wibble.Wibble
  ▔▔▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION

import wibble.{type Wibble as Wobble}

pub fn main() {
  let value: Wobble = wibble.Wibble
}
