language-server/src/tests/snapshots/gleam_language_server__tests__action__adding_annotations_prints_type_variable_names.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn do_generic_things(a: type_a, b: type_b) {\n  let a_value = a\n  let b_value = b\n  let other_value = a_value\n}\n"
---
----- BEFORE ACTION

pub fn do_generic_things(a: type_a, b: type_b) {
  let a_value = a
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let b_value = b
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let other_value = a_value
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑


----- AFTER ACTION

pub fn do_generic_things(a: type_a, b: type_b) {
  let a_value: type_a = a
  let b_value: type_b = b
  let other_value: type_a = a_value
}
